hw2/k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-2
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: hw-2
  template:
    metadata:
      labels:
        app: hw-2
    spec:
      containers:
        - name: hw-2
          image: "eltiiv/otus-healthcheck-04-2025:1.0.0"
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
