hw2/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw-2
spec:
  selector:
    app: hw-2
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
