hw2/k8s-manifests/ingress-rewrite.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw-2
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/mrilina($|/)(.*)
            pathType: Prefix
            backend:
              service:
                name: hw-2
                port:
                  number: 8000
