hw2/k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw-2
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: hw-2
                port:
                  number: 8000
